# src/http/handler/rbac.rs
@@ -177,3 +177,79 @@ pub async fn remove_user_permission(
 
     Ok(permission)
 }
+
+#[derive(Debug, Deserialize)]
+pub struct RolePathParam {
+    pub role: String,
+}
+
+pub async fn get_role_permissions(
+    enforcer: Data<RwLock<Enforcer>>,
+    scope: Scope,
+    current_user: CurrentUser,
+    path: Path<RolePathParam>,
+    list: Query<PaginationQuery>,
+) -> ApiResult<Json<Page<Permission>>> {
+    Scope::from(vec!["roles", "permissions"]).matches_exactly(&scope)?;
+    let role = &path.role;
+    let enforcer = enforcer.read().unwrap();
+    let sub = &Guid::partitioned("role", role);
+    enforcer.check(current_user.id(), sub, "read_permissions")?;
+
+    let limit = list.limit();
+    let cursor = list.cursor();
+
+    let cursor = if let Some(cursor) = cursor {
+        Some(Cursor::from_b64(cursor)?)
+    } else {
+        None
+    };
+
+    let rules = enforcer.list_principal_permissions(&sub, limit, cursor.as_ref()).await?;
+    let permissions = rules.map(|rule| Permission {
+        subject: Some(rule.subject().clone()),
+        object: rule.object().clone(),
+        action: rule.action().to_string(),
+    });
+    Ok(Json(permissions))
+}
+
+pub async fn add_role_permission(
+    enforcer: Data<RwLock<Enforcer>>,
+    scope: Scope,
+    current_user: CurrentUser,
+    path: Path<RolePathParam>,
+    permission: Json<Permission>,
+) -> ApiResult<Json<Permission>> {
+    Scope::from(vec!["roles", "permissions"]).matches_exactly(&scope)?;
+    let role = &path.role;
+    let enforcer = enforcer.read().unwrap();
+    let sub = Guid::partitioned("role", role);
+    enforcer.check(current_user.id(), &sub, "manage_permissions")?;
+
+    let mut permission = permission;
+    permission.subject = Some(sub.clone());
+    enforcer.add_permission(sub, permission.object.clone(), &permission.action).await?;
+
+    Ok(permission)
+}
+
+pub async fn remove_role_permission(
+    enforcer: Data<RwLock<Enforcer>>,
+    scope: Scope,
+    current_user: CurrentUser,
+    path: Path<RolePathParam>,
+    permission: Json<Permission>,
+) -> ApiResult<Json<Permission>> {
+    Scope::from(vec!["roles", "permissions"]).matches_exactly(&scope)?;
+    let role = &path.role;
+    let enforcer = enforcer.read().unwrap();
+    let sub = &Guid::partitioned("role", role);
+    enforcer.check(current_user.id(), sub, "manage_permissions")?;
+
+    let mut permission = permission;
+    permission.subject = Some(sub.clone());
+    enforcer.remove_permission(sub, permission.object.clone(), &permission.action).await?;
+
+    Ok(permission)
+}
