# src/routes.rs
@@ -51,10 +51,19 @@ pub fn routes(cfg: &mut web::ServiceConfig) {
                             .route("/{role}", web::put().to(rbac::add_user_role))
                             .route("/{role}", web::delete().to(rbac::remove_user_role))
                         )
-                        .service(web::scope("/permissions")
-                            .route("", web::get().to(rbac::get_user_permissions))
-                            .route("", web::post().to(rbac::add_user_permission))
-                            .route("", web::delete().to(rbac::remove_user_permission))
+                        .service(web::resource("/permissions")
+                            .route(web::get().to(rbac::get_user_permissions))
+                            .route(web::post().to(rbac::add_user_permission))
+                            .route(web::delete().to(rbac::remove_user_permission))
+                        )
+                    )
+                )
+                .service(web::scope("/roles")
+                    .service(web::scope("/{role}")
+                        .service(web::resource("/permissions")
+                            .route(web::get().to(rbac::get_role_permissions))
+                            .route(web::post().to(rbac::add_role_permission))
+                            .route(web::delete().to(rbac::remove_role_permission))
                         )
                     )
                 )
